# test-challenge

./: .gitignore  CHANGELOG.md  README.md  config.json  pyproject.toml  requirements.txt
config/: config.cfg
features/: env_manager.py  environment.py  environment_desktop.py
features/scenarios/api/pet/: create_pet.feature  delete_pet.feature  get_pet.feature  update_pet.feature
features/steps/api/: common_api_steps.py  pet_steps.py
utils/: api_utils.py
